syntax = "proto2";

package tv.v1x1.common.dto.proto.core;

import "Channel.proto";
import "User.proto";
import "Permission.proto";
import "Bot.proto";

message ChatMessage {
    required Channel channel = 1;
    required User sender = 2;
    required string text = 3;
    repeated Permission permissions = 4;
}

message PrivateMessage {
    required User sender = 1;
    required Bot target = 2;
    required string text = 3;
}